--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,7 +2,7 @@
     padding: 0;
     margin: 0;
     border: 0;
-    background-color: var(--background);
+    background-color: var(--test);
     color: var(--text);
     z-index: 0;
 }
@@ -18,6 +18,7 @@ body {
     --text: #000000;
     --primary: #403F4C;
     --secondary: #348AA7;
+    --test: #E5CFA2;
 }
 
 #header {
@@ -27,7 +28,7 @@ body {
     background-color: var(--background);
     color: var(--text);
     width: 98vw;
-    height: 12.5vh;
+    height: 10vh;
     border-radius: 20px;
     display: flex;
     align-items: center;
@@ -39,7 +40,7 @@ body {
     width: 7.5vh;
     height: 7.5vh;
     background-color: var(--text);
-    color: var(--background);
+    color: var(--text);
     position: relative;
     right: 17.5%;
 }
@@ -49,12 +50,14 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background-color: var(--background);
 }
 
 #header a {
     color: var(--text);
     display: flex;
     text-decoration: none;
+    background-color: var(--background);
 }
 
 #header a:hover{
@@ -73,7 +76,7 @@ body {
 }
 
 button:hover {
-    transition: 500ms ease-in;
+    transition: 250ms ease-in;
     transform: scale(1.1);
     cursor: pointer;
 } 
@@ -85,28 +88,29 @@ button:hover {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    background-color: var(--background);
 }
 
 #intro {
     width: 100vw;
     height: 100vh;
-    background-color: var(--primary);
+    background-color: var(--test);
 }
 
 #services {
     width: 100vw;
     height: 100vh;
-    background-color: var(--background);
+    background-color: var(--test);
 }
 
 #about {
     width: 100vw;
     height: 100vh;
-    background-color: var(--primary);
+    background-color: var(--test);
 }
 
 #contact {
     width: 100vw;
     height: 100vh;
-    background-color: var(--background);
+    background-color: var(--test);
 }
