--- a/src/css/index.css
+++ b/src/css/index.css
@@ -25,7 +25,7 @@ body {
     z-index: 1;
     position: fixed;
     top: 2.5%;
-    background-color: var(--test);
+    background-color: var(--background);
     color: var(--text);
     width: 98vw;
     height: 10vh;
@@ -50,14 +50,14 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: var(--test);
+    background-color: var(--background);
 }
 
 #header a {
     color: var(--text);
     display: flex;
     text-decoration: none;
-    background-color: var(--test);
+    background-color: var(--background);
 }
 
 #header a:hover{
@@ -70,7 +70,7 @@ body {
     border: 0cm;
     border-radius: 10px;
     background-color: var(--secondary);
-    color: var(--test);
+    color: var(--background);
     width: 7.5vw;
     height: 5vh;
 }
@@ -88,7 +88,7 @@ button:hover {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: var(--test);
+    background-color: var(--background);
 }
 
 #intro {
