--- a/src/css/LoginSignup.css
+++ b/src/css/LoginSignup.css
@@ -108,7 +108,7 @@ input:hover {
   cursor: pointer;
 }
 
-span:hover {
+.forgot_password span:hover {
   transition: 250ms;
   font-weight:bold;
   cursor: pointer;
@@ -137,4 +137,36 @@ span:hover {
 .gray {
   background: #eaeaea;
   color: #676767;
+}
+
+/* .googleSignin {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
+.media-options a{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+img.google-img{
+  position: absolute;
+  top: 50%;
+  left: 15px;
+  transform: translateY(-50%);
+}
+img.google-img{
+  height: 20px;
+  width: 20px;
+  object-fit: cover;
+}
+a.google{
+  border: 1px solid #CACACA;
+}
+a.google span{
+  font-weight: 500;
+  opacity: 0.6;
+  color: #232836;
 }
