--- a/src/css/LoginSignup.css
+++ b/src/css/LoginSignup.css
@@ -6,7 +6,7 @@
   --text: #1e1e1e;
   --primary: #333333;
   --secondary: #6883BA; */
-  
+
   --background: #FCF7F8;
   --text: #000000;
   --primary: #403F4C;
@@ -31,7 +31,8 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  margin-top:50%;
+  justify-content: center;
+  margin-top: 30%;
   width: 600px;
   background: var(--background);
   padding-bottom: 30px;
@@ -79,7 +80,7 @@ body {
 
 input:hover {
   transition: 250ms;
-  font-weight:bold;
+  font-weight: bold;
   cursor: pointer;
 }
 
@@ -112,7 +113,7 @@ input:hover {
 
 .forgot_password span:hover {
   transition: 250ms;
-  font-weight:bold;
+  font-weight: bold;
   cursor: pointer;
 }
 
@@ -147,33 +148,40 @@ input:hover {
   color: #676767;
 }
 
-.googleSignin a{
+.googleSignin a {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-img.google-img{
-  position: absolute;
-  top: 50%;
-  left: 15px;
+img.google-img {
+  position: relative;
+  top: 10px;
+  /* left: 5px; */
+  right: 10px;
   transform: translateY(-50%);
 }
-img.google-img{
+
+img.google-img {
   height: 20px;
   width: 20px;
   object-fit: cover;
 }
-a.google{
+
+a.google {
   border: 1px solid #CACACA;
+  border-radius: 20px;
+  width: 220px;
+  height: 50px;
 }
-a.google span{
+
+a.google span {
   font-weight: 500;
   opacity: 0.6;
   color: #232836;
 }
 
-.line{
+.line {
   position: relative;
   height: 1px;
   width: 90%;
@@ -181,7 +189,7 @@ a.google span{
   background-color: #d4d4d4;
 }
 
-.line::before{
+.line::before {
   content: 'Or';
   position: absolute;
   top: 50%;
