Refactor CSS and JavaScript code

--- a/src/css/LoginSignup.css
+++ b/src/css/LoginSignup.css
@@ -109,6 +109,7 @@ input:hover {
   justify-content: center;
   color: var(--text);
   cursor: pointer;
+
 }
 
 .forgot_password span:hover {
@@ -198,4 +199,13 @@ a.google span {
   background-color: var(--background);
   color: #8b8b8b;
   padding: 0 15px;
+}
+
+button {
+  border: 0cm;
+  /* border-radius: 10px;
+  background-color: var(--secondary);
+  color: var(--background);
+  width: 7.5vw;
+  height: 5vh; */
 }
