--- a/src/css/index.css
+++ b/src/css/index.css
@@ -11,6 +11,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 100%;
 }
 
 :root {
@@ -26,7 +27,7 @@ body {
     top: 2.5%;
     background-color: var(--background);
     color: var(--text);
-    width: 98vw;
+    width: 98%;
     height: 12.5vh;
     border-radius: 20px;
     display: flex;
@@ -88,25 +89,25 @@ button:hover {
 }
 
 #intro {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: var(--primary);
 }
 
 #services {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: var(--background);
 }
 
 #about {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: var(--primary);
 }
 
 #contact {
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     background-color: var(--background);
 }
