--- a/src/css/index.css
+++ b/src/css/index.css
@@ -2,9 +2,11 @@
     padding: 0;
     margin: 0;
     border: 0;
-    background-color: var(--background);
-    color: var(--text);
     z-index: 0;
+}
+
+section {
+    width: 100vw;
 }
 
 body {
@@ -88,25 +90,80 @@ button:hover {
 }
 
 #intro {
-    width: 100vw;
+    background-image: url(../contents/intro.avif);
+    background-size: cover;
+    background-position: center;
+    font-size: 40px; 
+    line-height: 2.5; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    width: 100%;
     height: 100vh;
-    background-color: var(--primary);
 }
 
 #services {
-    width: 100vw;
-    height: 100vh;
-    background-color: var(--background);
-}
-
-#about {
-    width: 100vw;
+    font-size: 40px;
+    line-height: 2.5; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    width: 100%;
     height: 100vh;
     background-color: var(--primary);
 }
 
-#contact {
-    width: 100vw;
+#about {
+    width: 100%;
     height: 100vh;
     background-color: var(--background);
+}
+
+#contact {
+    width: 100%;
+    height: 100vh;
+    background-color: var(--background);
+}
+
+#services-content>li{
+    color: var(--background);
+    font-size: 30px;
+    line-height: 2.5;
+}
+
+#intro-content {
+    color: var(--secondary);
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#service-image {
+    height: 80vh;
+    border: 0;
+    border-radius: 20px;
+    position: relative;
+    left: 5%;
+}
+
+.services-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.features{
+    font-size: 40px;
+    line-height: 2.5; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #ffffff;
+    width: 100%;
+    height: 10vh;
+    color: var(--background);
+    background-color: var(--primary);
 }
