--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     border: 0;
+    font-family: 'Montserrat', sans-serif;
 }
 
 :root {
@@ -9,7 +12,7 @@
     --text: #000000;
     --primary: #403F4C;
     --secondary: #348AA7;
-    --test: #E5CFA2;
+    --tertiary: #eaeaea;
 }
 
 body {
