--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,6 +4,7 @@
   padding: 0;
   margin: 0;
   border: 0;
+  font-size: 1em;
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -32,21 +33,31 @@ input {
   width: 75%;
 }
 
+span {
+  transition: color 1000ms ease-out;
+}
+
+span:hover {
+  color: var(--secondary);
+  cursor: default;
+  transition: color;
+}
+
 button:hover,
 #about a:hover {
-  transition: 500ms ease-in;
+  transition: 250ms ease-in;
   transform: scale(1.1);
   cursor: pointer;
 }
 
 #header {
-  z-index: 1;
+  z-index: 3;
   position: fixed;
   top: 2.5%;
   background-color: var(--background);
   color: var(--text);
   width: 98%;
-  height: 12.5vh;
+  height: 10vh;
   border-radius: 20px;
   display: flex;
   align-items: center;
@@ -101,35 +112,79 @@ button:hover,
 }
 
 #intro {
-    background-image: url(../contents/intro.avif);
-    background-size: cover;
-    background-position: center;
-    font-size: 40px; 
-    line-height: 2.5; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
-    width: 100%;
-    height: 100vh;
-}
-
-#services {
-    font-size: 40px;
-    line-height: 2.5; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
-    width: 100%;
-    height: 100vh;
-    background-color: var(--primary);
-}
-
-#services {
+  background-image: url(../contents/intro.avif);
+  background-size: cover;
+  background-position: center;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 2.5; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100vh;
-  background-color: var(--primary);
+}
+
+.darken-background {
+  filter: grayscale(100%);
+  position: absolute;
+  z-index: 2;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(0deg, var(--text) 0%, transparent 100%);
+}
+
+#company-name {
+  z-index: 3;
+  color: var(--background);
+  cursor: default;
+}
+
+#services {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: var(--text);
+  width: 100%;
+  height: 100vh;
+  background-color: var(--background);
+}
+
+.features h1{
+  font-size: 3rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  display: flex;
+  justify-content: center;
+  color: var(--text);
+  width: 100%;
+  background-color: var(--background);
+  margin-top: 5vh;
+}
+
+.services-container {
+  margin-top: 10vh;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.services-content p {
+  margin-bottom: 5vh;
+}
+
+.services-content p::before {
+  content: '•';
+  font-size: 2em;
+}
+
+#service-image {
+  height: 55vh;
+  border: 0;
+  border-radius: 20px;
+  position: relative;
+  left: 5%;
 }
 
 #about {
@@ -161,7 +216,6 @@ button:hover,
   font-size: 1.2rem;
   color: var(--background);
 }
-
 
 .about-image {
   flex-basis: 100%;
@@ -196,7 +250,6 @@ button:hover,
 }
 
 .about-text p {
-  font-size: 1.5rem;
   margin-bottom: 2rem;
   line-height: 1.6;
   background-color: var(--primary);
@@ -214,9 +267,8 @@ button:hover,
 }
 
 #contact-heading {
-  margin-top: 15vh;
-  font-size: 80px;
-  font-weight: bold;
+  font-size: 3rem;
+  font-weight: 300;
   top: 20vh;
 }
 
@@ -286,45 +338,4 @@ button:hover,
 
 .social-icon:hover {
   cursor: pointer;
-}
-
-#services-content>li{
-    color: var(--background);
-    font-size: 30px;
-    line-height: 2.5;
-}
-
-#intro-content {
-    color: var(--secondary);
-    background-color: transparent;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-#service-image {
-    height: 80vh;
-    border: 0;
-    border-radius: 20px;
-    position: relative;
-    left: 5%;
-}
-
-.services-container {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.features{
-    font-size: 40px;
-    line-height: 2.5; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #ffffff;
-    width: 100%;
-    height: 10vh;
-    color: var(--background);
-    background-color: var(--primary);
 }
