Update accessControl.html and accessControl.css

--- a/src/css/accessControl.css
+++ b/src/css/accessControl.css
@@ -80,6 +80,7 @@ input:hover {
   margin-top: 2.5vh;
   color: var(--primary);
   font-size: 15px;
+  padding-right: 5px;
 }
 
 .forgot-password span {
@@ -87,13 +88,16 @@ input:hover {
   justify-content: center;
   color: var(--text);
   cursor: pointer;
-
 }
 
 .forgot-password span:hover {
   transition: 250ms;
   font-weight: bold;
   cursor: pointer;
+}
+
+.temp {
+  padding-right: 5px;
 }
 
 .submit-container {
