--- a/src/css/accessControl.css
+++ b/src/css/accessControl.css
@@ -147,7 +147,7 @@ input:hover {
   padding: 0 15px;
 }
 
-/* .googleSignin a {
+.googleSignin a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -167,7 +167,7 @@ img.google-img {
 }
 
 a.google {
-  border: 1px solid #CACACA; try not to use something different than :root colors 
+  border: 1px solid #CACACA; 
   border-radius: 20px;
   width: 220px;
   height: 50px;
@@ -176,5 +176,5 @@ a.google {
 a.google span {
   font-weight: 500;
   opacity: 0.6;
-  color: #232836; try not to use something different than :root colors
-} */
+  color: #232836; 
+}
