--- a/src/css/index.css
+++ b/src/css/index.css
@@ -163,11 +163,10 @@ button:hover,
   margin-top: 5vh;
 }
 
-.task-management-container {
-  display: grid;
+.features-container {
+  display: flex;
   flex-direction: column;
-  grid-area: 1;
-  grid-column: 1;
+
 }
 
 .task-management {
@@ -180,8 +179,10 @@ button:hover,
 }
 
 .deadline-tracker-container {
-  display: grid;
+  display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: start;
   grid-area: 2;
   grid-column: 2;
 }
@@ -195,14 +196,14 @@ button:hover,
 }
 
 .file-sharing-container {
-  display: grid;
-  flex-direction: row;
+  display: flex;
+  flex-direction: column;
   grid-area: 3;
   grid-column: 3;
 }
 
 .file-sharing {
-  display: block;
+  display: flex;
   flex-direction: column;
   /* justify-content: start; */
   margin-top: 5vh;
@@ -214,6 +215,8 @@ button:hover,
 
   width: 100%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: space-evenly;
 }
 
@@ -232,10 +235,12 @@ button:hover,
 }
 
 #service-image {
+  display: flex;
+  flex-direction: row;
   height: 55vh;
   border: 0;
   border-radius: 20px;
-  position: relative;
+  position: absolute;
   left: 5%;
 }
 
