--- a/src/css/index.css
+++ b/src/css/index.css
@@ -241,7 +241,8 @@ button:hover,
   border: 0;
   border-radius: 20px;
   position: absolute;
-  left: 5%;
+  /* left: 60%; */
+  right: 10%;
 }
 
 #about {
