--- a/src/css/index.css
+++ b/src/css/index.css
@@ -292,6 +292,8 @@ button:hover,
   color: var(--background);
 }
 
+/* CONTACT CSS */
+
 #contact {
   width: 100%;
   height: 100vh;
@@ -303,8 +305,8 @@ button:hover,
 }
 
 #contact-heading {
-  font-size: 3rem;
-  font-weight: 300;
+  font-size: 2.5em;
+  font-weight: 700;
   top: 20vh;
 }
 
