--- a/src/css/ganttStyle.css
+++ b/src/css/ganttStyle.css
@@ -1,5 +1,5 @@
 .gantt-container {
-    width: 90vw; 
+    width: 90vw;
     margin: 0 auto;
 }
 
@@ -9,5 +9,11 @@
 
 .change-chart p {
     font-size: 25px;
+    font-weight: 500;
+}
+
+.timescale {
+    font-size: 25px;
+    text-align: center;
     font-weight: 500;
 }
