--- a/src/css/accessControl.css
+++ b/src/css/accessControl.css
@@ -24,6 +24,10 @@ input:hover {
   cursor: pointer;
 }
 
+.hidden {
+  display: none;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -43,7 +47,7 @@ input:hover {
   margin-top: 2.5vh;
 }
 
-.header-text {
+#header-text {
   font-size: 40px;
   font-weight: 700;
   color: var(--primary);
@@ -127,7 +131,7 @@ input:hover {
   cursor: pointer;
 }
 
-.gray {
+.selected {
   background: var(--tertiary);
   color: var(--primary);
 }
@@ -149,36 +153,4 @@ input:hover {
   background-color: var(--background);
   color: var(--primary);
   padding: 0 15px;
-}
-
-.googleSignin a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-img.google-img {
-  position: relative;
-  top: 10px;
-  right: 10px;
-  transform: translateY(-50%);
-}
-
-img.google-img {
-  height: 20px;
-  width: 20px;
-  object-fit: cover;
-}
-
-a.google {
-  border: 1px solid #CACACA; 
-  border-radius: 20px;
-  width: 220px;
-  height: 50px;
-}
-
-a.google span {
-  font-weight: 500;
-  opacity: 0.6;
-  color: #232836; 
 }
