--- a/src/css/project.css
+++ b/src/css/project.css
@@ -1,26 +1,88 @@
-/* @import 'index.css'; */
+@import 'index.css';    
 
-.container {
+/* .container {
     display: grid;
     grid-auto-rows: minmax(100px, auto);
+} */
+
+.container {
+    display: flex;
+    flex-direction: row;
+    /* justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
+    /* margin: 10px;
+    padding: 10px; */
+    /* background-color: var(--tertiary);
+    width: 100%; */ 
+    /* height: 100%; */
 }
 
-#backlog-content {
-    grid-column: 1;
-    grid-row: 1;
+.scrum-board {
+    flex: 1;
+    padding: 20px;
+    /* padding: 100px; */
+    /* padding: 100%; */
+    /* margin-bottom: 50%;     */
+    border-right: 1px solid var(--primary);
+    border-bottom: 1px solid var(--primary);
+    
+}
+
+/* #backlog-content {
+    display: flex;
+    flex-direction: row;
 }
 
 #toDo-content {
-    grid-column: 2;
-    grid-row: 2;
+    display: flex;
+    flex-direction: row;
 }
 
 #inProgress-content {
-    grid-column: 3;
-    grid-row: 3;
+    display: flex;
+    flex-direction: row;
 }
 
 #done-content {
-    grid-column: 4;
-    grid-row: 4;
+    display: flex;
+    flex-direction: row;
+} */
+
+
+/* .backlog-container {
+    display: flex;
+    flex-direction: row;
+    width: 25%;
+    margin: 10px;
+    padding: 10px;
+    background-color: var(--tertiary);
 }
+
+.toDo-container {
+    display: flex;
+    flex-direction: row;
+    width: 25%;
+    margin: 10px;
+    padding: 10px;
+    background-color: var(--tertiary);
+}
+
+.inProgress-container {
+    display: flex;
+    flex-direction: row;
+    width: 25%;
+    margin: 10px;
+    padding: 10px;
+    background-color: var(--tertiary);
+}
+
+.done-container {
+    display: flex;
+    flex-direction: row;
+    width: 25%;
+    margin: 10px;
+    padding: 10px;
+    background-color: var(--tertiary);
+}
+ */
