--- a/src/css/accessControl.css
+++ b/src/css/accessControl.css
@@ -16,6 +16,7 @@ input {
   outline: none;
   color: var(--text);
   font-size: 15px;
+  
 }
 
 input:hover {
@@ -65,6 +66,7 @@ input:hover {
   display: flex;
   flex-direction: column;
   gap: 25px;
+  /* padding: 10px; */
 }
 
 .input {
@@ -76,12 +78,15 @@ input:hover {
   background: var(--tertiary);
   border-radius: 6px;
   padding: 5px;
+  /* margin-bottom: 10px; */
+  margin-top: 25px;
 }
 
 #info-container {
   margin-top: 5vh;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  /* grid-template-columns: 1fr 1fr; */
+  justify-content: space-evenly;
 }
 
 .info {
@@ -110,7 +115,7 @@ input:hover {
   font-size: 15px;
   font-weight: 700;
   align-self: center;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 #password-error {
@@ -137,4 +142,10 @@ input:hover {
   background-color: var(--background);
   color: var(--primary);
   padding: 0 15px;
+}
+
+.bttn {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
 }
