--- a/src/css/userView.css
+++ b/src/css/userView.css
@@ -11,6 +11,7 @@ body, html {
     height: 100%;
 }
 
+/* Top navigation bar */
 .top-nav {
     display: flex;
     justify-content: space-between;
