--- a/src/css/userView.css
+++ b/src/css/userView.css
@@ -1,35 +1,43 @@
+/* Reset and base styles */
 body, html {
-    height: 100%;
     margin: 0;
-    font-family: 'Arial', sans-serif;
-    background-color: #eaeaea;
+    padding: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: #f0f2f5;
 }
 
+/* Wrapper for the entire layout */
 .wrapper {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
 }
 
-/* Top navigation bar */
 .top-nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #fff;
-    padding: 10px 20px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+    padding: 0 20px;
+    background-color: #007bff; /* Blue background */
+    color: #ffffff;
+    border-bottom: 10px solid #007bff; /* Matching border */
 }
 
+
 .logo {
-    font-weight: bold;
-    font-size: 1.5em;
+    font-size: 24px;
 }
 
 .menu-items a {
-    margin-left: 20px;
+    color: #ffffff;
     text-decoration: none;
-    color: #333;
+    padding: 10px 15px;
+    border-radius: 50px;
+    transition: background-color 0.3s;
+}
+
+.menu-items a:hover {
+    background-color: #0056b3;
 }
 
 .dashboard {
@@ -38,50 +46,36 @@ body, html {
 }
 
 .sidebar {
-    flex-basis: 20%;
-    background-color: #fff;
-    margin: 10px;
+    width: 200px;
+    background-color: #233348;
+    color: #ffffff;
     padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-}
-
-.main-content {
-    flex-grow: 1;
-    margin: 10px;
-    padding: 20px;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    position: relative;
 }
 
 .section {
     margin-bottom: 20px;
+    transition: transform 0.3s;
 }
 
-h2 {
-    color: #007bff;
-    border-bottom: 2px solid #007bff;
-    padding-bottom: 5px;
-    margin-bottom: 15px;
+.section:hover {
+    transform: scale(0.93);
 }
 
-.btn {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
+.main-content {
+    flex-grow: 1;
+    padding: 20px;
+}
+
+.add-note {
+    background-color: #28a745;
+    color: #ffffff;
     border: none;
+    padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s;
 }
 
-.btn:hover {
-    background-color: #0056b3;
+.add-note:hover {
+    background-color: #218838;
 }
-
