--- a/webpages/src/css/accessControl.css
+++ b/webpages/src/css/accessControl.css
@@ -59,14 +59,14 @@ form {
 }
 
 .access-header::after {
-  content: ''; 
+  content: '';
   position: absolute;
   left: 0;
-  bottom: -50%; 
-  width: 100%; 
-  height: 15%; 
-  background-color: var(--primary); 
-  border-radius: 5px; 
+  bottom: -50%;
+  width: 100%;
+  height: 15%;
+  background-color: var(--primary);
+  border-radius: 5px;
 }
 
 .submit-form {
@@ -77,13 +77,15 @@ form {
   font-size: 1.25em;
   margin: 5% 0%;
   height: fit-content;
+  opacity: 0.4;
 }
 
 .submit-form:hover {
   transition: 250ms;
-  cursor: pointer;
+  cursor: not-allowed;
   transform: scale(1.1);
 }
+
 
 .access-info {
   font-size: 15px;
