added max height and width to message input

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -328,8 +328,10 @@ button:hover,
 
 #message-input {
   width: 100%;
+  max-width: 100%;
   margin-top: 2%;
   height: 30vh;
+  max-height: 50vh;
   font-size: 25px;
   padding: 8px 0px;
   border: 1px solid var(--text);
