--- a/webpages/src/css/userView.css
+++ b/webpages/src/css/userView.css
@@ -59,15 +59,16 @@ body, html {
     padding: 20px;
 }
 
-.section {
+.sidebar-buttons {
     margin-bottom: 20px;
     padding: 10px;
     border-radius: 5px;
-    background-color: #2c3e50; /* Darker background color */
+    background-color: #2c3e50; 
     transition: background-color 0.3s;
 }
 
-.section:hover {
+.sidebar-buttons:hover {
+    cursor: pointer;
     background-color: #34495e; /* Slightly lighter background color on hover */
 }
 
