--- a/webpages/src/css/scrumBoard.css
+++ b/webpages/src/css/scrumBoard.css
@@ -7,6 +7,7 @@
     --background: #e8e5e5;
     --tertiary: #f4f4f4;
     --quaternary: #cacaca;
+    --quinary: #8e8e8e;
 }
 
 * {
@@ -23,9 +24,9 @@ body,
 }
 
 body {
-    font-weight: 300;
-    background-color: var(--background);
-    font-size: 14px;
+    font-weight: 400;
+    background-color: var(--quinary);
+    font-size: 20px;
 }
 
 ul {
@@ -38,12 +39,16 @@ a {
 }
 
 .top-nav {
+    color: var(--background);
+
     &:after {
         content: "";
         display: table;
         clear: both;
     }
 }
+
+
 
 .hide {
     display: none !important;
@@ -377,9 +382,10 @@ header {
 }
 
 footer {
-    height: 50px;
+    height: 55px;
     position: relative;
     border-top: 1px solid var(--primary);
+    background-color: var(--primary);
 }
 
 .add-task {
